populate all api routes with swagger docs
