# docs/swagger.yaml
@@ -15,6 +15,13 @@ definitions:
       title:
         type: string
     type: object
+  main.ErrorResponse:
+    properties:
+      message:
+        type: string
+      status:
+        type: integer
+    type: object
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
@@ -34,9 +41,8 @@ info:
 paths:
   /books:
     get:
-      consumes:
-      - application/json
-      description: Get books
+      description: Get list of books
+      operationId: get-books
       produces:
       - application/json
       responses:
@@ -46,9 +52,99 @@ paths:
             items:
               $ref: '#/definitions/main.Book'
             type: array
-      summary: Retrieve books
-      tags:
-      - books
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Get list of books
+    post:
+      consumes:
+      - application/json
+      description: Add a new book
+      operationId: add-book
+      parameters:
+      - description: Book object
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/main.Book'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Add a new book
+  /books/{id}:
+    delete:
+      description: Remove a book
+      operationId: remove-book
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Remove a book
+    get:
+      description: Get a book by ID
+      operationId: get-book-by-id
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Book'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Get a book by ID
+    patch:
+      description: Update book availability
+      operationId: update-book-availability
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Book'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: Update book availability
 securityDefinitions:
   BasicAuth:
     type: basic
